feat(bncs+d2cs): d2 mcp